--- a/doc/s/css/main.css
+++ b/doc/s/css/main.css
@@ -143,7 +143,9 @@ p {
 }
 
 .sidebar {
+  bottom: 0;
   font-size: 12px;
+  overflow: auto;
   padding: 5px 10px 20px 0;
   position: fixed;
   left: 20px;
